crates/eure-macros/tests/compile_fail/flatten_in_parse_ext_context.rs
use eure::FromEure;

#[derive(FromEure)]
#[eure(parse_ext)]
struct Test {
    #[eure(flatten)]
    field: String,
}

fn main() {}
